name:                roku-api
version:             0.1.0.0
synopsis:            Bindings to Roku's External Control API
license:             BSD3
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.Roku
                     , Network.Roku.Keys
                     , Network.Roku.Query
                     , Network.Roku.Request
  build-depends:       base >=4.9 && <4.10
                     , bytestring
                     , http-client
                     , network
                     , text
  default-language:    Haskell2010
